--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,40 +25,79 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">John</h2>
+        <h2 class="card-title">Tom</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:john@gmail.com">john@gmail.com</a></li>
-            <li class="list-group-item">Office number: 6105555555</li>
+            <li class="list-group-item">Email: <a href="mailto:tom@gmail.com">tom@gmail.com</a></li>
+            <li class="list-group-item">Office number: 6101234567</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Tom</h2>
+        <h2 class="card-title">John</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:tom@gmail.com">tom@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/tomsmith" target="_blank" rel="noopener noreferrer">tomsmith</a></li>
+            <li class="list-group-item">Email: <a href="mailto:john@hotmail.com">john@hotmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/johnsmith123" target="_blank" rel="noopener noreferrer">johnsmith123</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Chris</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:chrissmith@gmail.com">chrissmith@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/chrissmith44" target="_blank" rel="noopener noreferrer">chrissmith44</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Kenny</h2>
+        <h2 class="card-title">Ken</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:kenny@gmail.com">kenny@gmail.com</a></li>
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:ken@school.edu">ken@school.edu</a></li>
             <li class="list-group-item">School: Moravian</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Chris</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:chris@lafayette.edu">chris@lafayette.edu</a></li>
+            <li class="list-group-item">School: Lafayette</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Dan</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 6</li>
+            <li class="list-group-item">Email: <a href="mailto:danjones@gmail.com">danjones@gmail.com</a></li>
+            <li class="list-group-item">School: Lehigh</li>
         </ul>
     </div>
 </div>
